--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 ---
 layout: default
-title: Home
+title: home
 ---
 
-<div class="main-container">
-    <section id="bio">
-        <div class="bio-content">
-            <div class="bio-text">
+
+
+<h2>about me</h2>
+            <div class="page-intro">
                 <p>I'm Bruno. Sometimes I go by Brunny.</p>
                 <p>I work on startups for a living, and I enjoy tinkering on side projects (like this one), cooking, playing golf, and hanging out with my dog, wife, family, and friends.</p>
                 <p>I built this website as a learning exercise to deploy a web server on a Raspberry Pi and to showcase some of my projects and writing.</p>
             </div>
-        </div>
-    </section>
-</div>
+
