finished initial draft of blog.md, hobbies.md, and got to work on stuff-ive-worked-on.md

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: home
 <h2>about me</h2>
             <div class="page-intro">
                 <p>I'm Bruno. Sometimes I go by Brunny.</p>
-                <p>I work on startups for a living, and I enjoy tinkering on side projects (like this one), cooking, playing golf, and hanging out with my dog, wife, family, and friends.</p>
-                <p>I built this website as a learning exercise to deploy a web server on a Raspberry Pi and to showcase some of my projects and writing.</p>
+                <p>I work on startups for a living, and in my spare time, I enjoy tinkering on side projects, cooking, playing golf, and hanging out with my dog, wife, family, and friends.</p>
+                <p>I built this website as a learning exercise and to showcase some of my projects, hobbies, and writing.</p>
             </div>
 
