spent a few days working on getting this website hosted; had to make some stylistic changes / build settings changes to get this to work

--- a/404.html
+++ b/404.html
@@ -1,25 +1,20 @@
 ---
 permalink: /404.html
 layout: default
+title: 404 - Page Not Found
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+<h2>404 - Page Not Found</h2>
 
-<div class="container">
-  <h1>404</h1>
+<div class="page-intro">
+  <p>The page you're looking for doesn't exist.</p>
+</div>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div class="not-found-actions">
+  <p>Here are some options:</p>
+  <ul>
+    <li><a href="{{ '/' | relative_url }}">Return to the homepage</a></li>
+    <li><a href="{{ '/blog' | relative_url }}">Check out my blog</a></li>
+    <li><a href="{{ '/projects-ive-worked-on' | relative_url }}">Explore my projects</a></li>
+  </ul>
 </div>
