--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@ layout: default
 title: home
 ---
 
-
-
-<h2>about me</h2>
+<h2>About me</h2>
             <div class="page-intro">
                 <p>I'm Bruno. Sometimes I go by Brunny.</p>
                 <p>I work on startups for a living, and in my spare time, I enjoy tinkering on side projects, cooking, playing golf, and hanging out with my dog, wife, family, and friends.</p>
