made site more mobile-friendly

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@ title: home
 ---
 
 <h2>About me</h2>
-            <div class="page-intro">
-                <p>I'm Bruno. Sometimes I go by Brunny.</p>
-                <p>I work on startups for a living, and in my spare time, I enjoy tinkering on side projects, cooking, playing golf, and hanging out with my dog, wife, family, and friends.</p>
-                <p>I built this website as a learning exercise and to showcase some of my projects, hobbies, and writing.</p>
-            </div>
 
+<div class="page-intro">
+    <p>I'm Bruno. Sometimes I go by Brunny.</p>
+    
+    <p>I've spent the early part of my career working on startups. 
+    In my spare time, I enjoy learning more about the world, cooking, playing golf, 
+    and hanging out with my dog, family, and friends.</p>
+    
+    <p>I built this website from scratch as a learning exercise, and as a place to host some of my 
+    <a href="{{ '/projects-ive-worked-on' | relative_url }}">projects</a>, 
+    <a href="{{ '/hobbies' | relative_url }}">hobbies</a>, 
+    and <a href="{{ '/blog' | relative_url }}">writing</a>.</p>
+</div>
