added a project and some learning resources to hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@ permalink: /hobbies/
 <div class="page-intro">
     <p>I spend most of my time working at <a href="https://pluto.xyz/">Pluto</a> or tinkering
     <a href="{{ '/projects-ive-worked-on' | relative_url }}">on side projects</a>.</p>
-    <p>When I get some free time, I learn more about the world. My main focus areas for learning today are computer science and cryptography, but I also try to learn about some other unrelated topics I find interesting, like longevity, space exploration, and the deep intricacies of finance. I follow along to free online university courses, read books, listen to podcasts, and generally do my best to stay constantly curious about the world. </p>
+    <p>When I get some free time, I learn more about the world. My main focus areas today are computer science and cryptography, but I also try to learn about some other unrelated topics I find interesting, like longevity, space exploration, and the deep intricacies of finance. I follow along to free online university resources, read books, listen to podcasts, and generally do my best to stay constantly curious about the world. </p>
     <p>I also like to cook, play golf, and spend time with my family and friends.</p>
 </div>
 
@@ -18,6 +18,7 @@ permalink: /hobbies/
     <div class="details-content">
         <p>I spend at least a few hours a week going through high-quality learning material from across the interwebs. Here are some of the best materials I've gone through recently:</p>
         <ul>
+            <li><a href="https://icourse.club/uploads/files/96a2b94d4be48285f2605d843a1e6db37da9a944.pdf">From Bits and Gates to C++</a></li>
             <li><a href="https://www.youtube.com/watch?v=LfaMVlDaQ24&t=2649s">Harvard's CS50 course</a></li>
             <li><a href="https://www.youtube.com/watch?v=h-94UhJLeck&list=PLj80z0cJm8QErn3akRcqvxUsyXWC81OGq">ZK Whiteboard Sessions</a></li>
             <li><a href="https://www.youtube.com/watch?v=KNJGPI0fuFA&list=PLEGCF-WLh2RLOHv_xUGLqRts_9JxrckiA">Tim Roughgarden's Foundation of Blockchains course</a></li>
