--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ title: home
 <div class="page-intro">
     <p>I'm Bruno. Sometimes I go by Brunny.</p>
     
-    <p>I've spent the early part of my career working on startups. 
-    In my spare time, I enjoy learning more about the world, cooking, playing golf, 
-    and hanging out with my dog, family, and friends.</p>
+    <p>I've spent the early part of my career working on startups, like [Aztec](https://aztec.network/) and [Pluto](https://pluto.xyz/). 
+    In my spare time, I enjoy learning more about the world, cooking, eating, playing golf, 
+    and spending time with my dog, family, and friends.</p>
     
-    <p>I built this website from scratch as a learning exercise, and as a place to host some of my 
+    <p>I built this website as a place to host some of my 
     <a href="{{ '/projects-ive-worked-on' | relative_url }}">projects</a>, 
-    <a href="{{ '/hobbies' | relative_url }}">hobbies</a>, 
-    and <a href="{{ '/blog' | relative_url }}">writing</a>.</p>
+    <a href="{{ '/blog' | relative_url }}">writing</a>, 
+    and <a href="{{ '/hobbies' | relative_url }}">hobbies</a>.</p>
 </div>
