fix broken link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: home
 <div class="page-intro">
     <p>I'm Bruno. Sometimes I go by Brunny.</p>
     
-    <p>I've spent the early part of my career working on startups, like [Aztec](https://aztec.network/) and [Pluto](https://pluto.xyz/). 
+    <p>I've spent the early part of my career working on startups, like <a href="https://aztec.network/">Aztec</a> and <a href="https://pluto.xyz/">Pluto</a>. 
     In my spare time, I enjoy learning more about the world, cooking, eating, playing golf, 
     and spending time with my dog, family, and friends.</p>
     
